t22 add namespace creation API (SCRUM-6)
Closes #186.

(cherry picked from commit b23f004c14e4c25dbf96f5028cae0906917b72cb)
